--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 homework/.ipynb_checkpoints/Day_001_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Untitled-checkpoint.ipynb
+tmp/Day_001_HW.ipynb
