--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 homework/.ipynb_checkpoints/Day_001_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Untitled-checkpoint.ipynb
 tmp/Day_001_HW.ipynb
+/data
