--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ homework/.ipynb_checkpoints/Day_001_HW-checkpoint.ipynb
 homework/.ipynb_checkpoints/Untitled-checkpoint.ipynb
 tmp/Day_001_HW.ipynb
 /data
+/doc
+/tmp
